Fix up search bar on mobile

--- a/_sass/search.scss
+++ b/_sass/search.scss
@@ -7,10 +7,11 @@
   z-index: 99;
   display: none;
   flex-grow: 1;
-  padding-bottom: $gutter-spacing / 2;
-  background-color: $white;
   padding: $sp-2;
   margin-bottom: $sp-3;
+  background-color: $white;
+  border-radius: 3px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 3px 10px rgba(0, 0, 0, 0.05);
 
   @include mq(md) {
     display: block;
@@ -20,6 +21,7 @@
     padding-left: 0;
     margin-bottom: 0;
     background-color: transparent;
+    box-shadow: none;
   }
 
   &.nav-open {
@@ -64,6 +66,16 @@
     + .search-icon {
       fill: $purple-000;
     }
+  }
+
+  @include fs-5;
+
+  @include mq(sm) {
+    @include fs-3;
+  }
+
+  @include mq(md) {
+    @include fs-2;
   }
 }
 
